# void

./: .gdb_history  README.md  makefile
.github/workflows/: rust.yml
legacy/voidgui/: meson.build
legacy/voidgui/include/: array.h  voidgui.h
legacy/voidgui/include/logic/: draw_queue.h  list.h  sink.h
legacy/voidgui/include/render/: painter.h
legacy/voidgui/include/widgets/: toolbar.h  window.h
legacy/voidgui/src/: store.c
legacy/voidgui/src/logic/: click_sink.c
legacy/voidgui/src/render/shaders/: common.frag
legacy/voidgui/src/widgets/: menu.c  table.c  window.c
void/: void.cabal
void/app/: Data.hs  Entry.hs  GUI.hs  Main.hs
void/app/Database/: Interface.hs
void/lib/Void/CRM/: Damage.hs  Database.hs  GUI.hs  Plan.hs  Subscriber.hs
void/test/: Main.hs  Marshall.hs
void/test/Tests/: Damage.hs  Marshall.hs
voidgui/: Cargo.toml  compile_flags.txt  meson.build
voidgui/include/: array.h  macros.h  store.h  voidgui.h
voidgui/include/logic/: click_sink.h  consts.h  draw_queue.h  key_sink.h  list.h  sink.h  state.h  text_input_sink.h
voidgui/include/render/: commons.h  painter.h  shaders.h  shape_buffer.h  shapes.h
voidgui/include/widgets/: menu.h  spreadsheet.h  subwindow.h  table.h  toolbar.h  window.h
voidgui/src/: exports.rs  lib.rs  voidgui.c  window.rs
voidgui/src/logic/: click_sink.c  draw_queue.c  key_sink.c  layout.rs  list.c  mod.rs  ring.rs  sink.c  text_input_sink.c
voidgui/src/render/: layout.rs  mod.rs  painter.c  painter.rs  primitives.rs  shaders.c  shaders.rs  shape_buffer.c  shapes.c  shapes.rs  text_table.rs
voidgui/src/render/shaders/: common.frag  common.vert  meson.build  tex.frag  tex.vert
voidgui/src/render/shapes/: grid.rs  mod.rs  rectangle.rs  texture.rs
voidgui/src/widgets/: menu.c  mod.rs  spreadsheet.c  spreadsheet.rs  table.c  toolbar.c  toolbar.rs  widget.rs  window.c  window.rs
voidgui/voidcrm/: Cargo.toml
voidgui/voidcrm/src/: data.rs  exports.rs  lib.rs
voidgui/voidgui/: Cargo.toml
voidgui/voidgui/benches/: layout_benchmark.rs  ring_benchmark.rs
voidgui/voidgui/src/: backend.rs  colorscheme.rs  core.rs  exports.rs  lib.rs  window.rs
voidgui/voidgui/src/logic/: callbak_result.rs  damage_tracker.rs  dataset.rs  file.rs  group_queue.rs  layout.rs  mod.rs  ring.rs  stable_buffer.rs
voidgui/voidgui/src/logic/data/: dataset.rs  file.rs  mod.rs  record.rs
voidgui/voidgui/src/render/: mod.rs  painter.rs  primitives.rs  shaders.rs  text_table.rs
voidgui/voidgui/src/render/painter/: buffer.rs  comres.rs  description.rs  drone.rs  mod.rs  painter.rs  parka.rs
voidgui/voidgui/src/render/shaders/: common.vert  grad.frag
voidgui/voidgui/src/render/shapes/: common_res.rs  grid.rs  mod.rs  rectangle.rs  texture.rs
voidgui/voidgui/src/widgets/: input_field.rs  menu.rs  mod.rs  oriented_layout.rs  picker.rs  spreadsheet.rs  status.rs  toolbar.rs  window.rs
voidgui/voidgui/src/widgets/traits/: clickable.rs  drawable.rs  input.rs  key.rs  mod.rs  parent.rs  transient.rs  widget.rs
voidgui/voidmacro/: Cargo.toml  rustfmt.toml
voidgui/voidmacro/src/: lib.rs
