cabal-version:      2.4
name:               voidcore
version:            0.1.0.0

-- synopsis:

-- description:

author:             head-gardener
maintainer:         trashbin2019np@gmail.com

executable void
  main-is:          Main.hs

  other-modules:    GUI, Entry, Database.Interface

  extra-libraries:  voidcrm
  build-depends:    base ^>=4.15.1.0, bytestring, postgresql-simple, serialise
  hs-source-dirs:   app
  default-language: Haskell2010
