cabal-version: 2.4
name:          voidcore
version:       0.1.0.0

-- synopsis:

-- description:

author:        head-gardener
maintainer:    trashbin2019np@gmail.com

library void-crm
  exposed-modules:
    Void.CRM.Database
    Void.CRM.Damage
    Void.CRM.GUI
    Void.CRM.Subscriber

  extra-libraries:  voidcrm
  build-depends:
    , base               ^>=4.15.1.0
    , bytestring
    , postgresql-simple
    , serialise
    , transformers

  hs-source-dirs:   lib
  default-language: Haskell2010

executable void-app
  main-is:          Main.hs
  build-depends:
    , base      ^>=4.15.1.0
    , void-crm
    , postgresql-simple
    , transformers

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite marshall
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Marshall.hs
  hs-source-dirs:   test
  build-depends:
    , base      ^>=4.15.1.0
    , hspec     ^>=2.11.0.1
    , void-crm
