cabal-version: 2.4
name:          voidcore
version:       0.1.0.0

-- synopsis:

-- description:

author:        head-gardener
maintainer:    trashbin2019np@gmail.com

library void-crm
  exposed-modules:
    Void.CRM.Damage
    Void.CRM.Database
    Void.CRM.GUI
    Void.CRM.Plan
    Void.CRM.Subscriber

  extra-libraries:  voidcrm
  build-depends:
    , base               ^>=4.15.1.0
    , bytestring
    , postgresql-simple
    , QuickCheck
    , serialise
    , transformers

  hs-source-dirs:   lib
  default-language: Haskell2010

executable void-app
  main-is:          Main.hs
  build-depends:
    , base               ^>=4.15.1.0
    , postgresql-simple
    , transformers
    , void-crm

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Tests.Damage
    Tests.Marshall

  hs-source-dirs:   test
  build-depends:
    , base        ^>=4.15.1.0
    , hspec       ^>=2.11.0.1
    , QuickCheck
    , void-crm
