[package]
name = "voidgui"
version = "0.1.0"
edition = "2021"

[lib]
name = "voidgui"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
gl = ">=0.14"
glfw = ">=0.51"
pangocairo = ">=0.17"
downcast-rs = ">=1.2"
rayon = ">=1.7"
voidmacro = { path = "../voidmacro" }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4"

[[bench]]
name = "ring_benchmark"
harness = false

# [[bench]]
# name = "layout_benchmark"
# harness = false
